--- a/mobile/www/app/components/home/mentions/mentions.html
+++ b/mobile/www/app/components/home/mentions/mentions.html
@@ -1,10 +1,3 @@
 <ion-view view-title="Mentions">
-    <ion-content>
-        <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
-        <ion-list>
-            <ion-item ng-repeat="mention in vm.mentioned">
-                <tatami-status status="mention"></tatami-status>
-            </ion-item>
-        </ion-list>
-    </ion-content>
+    <tatami-status-list statuses="vm.mentioned" tatami-refresher="vm.getNewStatuses()"></tatami-status-list>
 </ion-view>
