--- a/mobile/www/app/components/home/timeline/timeline.html
+++ b/mobile/www/app/components/home/timeline/timeline.html
@@ -1,10 +1,3 @@
 <ion-view view-title="Timeline">
-    <ion-content>
-        <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
-        <ion-list>
-            <ion-item ng-repeat="status in vm.statuses">
-                <tatami-status status="status"></tatami-status>
-            </ion-item>
-        </ion-list>
-    </ion-content>
+    <tatami-status-list statuses="vm.statuses" tatami-refresher="vm.getNewStatuses()"></tatami-status-list>
 </ion-view>
