Pass the current user into the status list of the timeline tab

--- a/mobile/www/app/components/home/timeline/timeline.html
+++ b/mobile/www/app/components/home/timeline/timeline.html
@@ -1,3 +1,3 @@
 <ion-view view-title="Timeline">
-    <tatami-status-list statuses="vm.statuses" tatami-refresher="vm.getNewStatuses()"></tatami-status-list>
+    <tatami-status-list statuses="vm.statuses" current-user="vm.currentUser" tatami-refresher="vm.getNewStatuses()"></tatami-status-list>
 </ion-view>
