--- a/mobile/www/app/components/home/mentions/mentions.html
+++ b/mobile/www/app/components/home/mentions/mentions.html
@@ -1,3 +1,3 @@
 <ion-view view-title="Mentions">
-    <tatami-status-list statuses="vm.mentioned" tatami-refresher="vm.getNewStatuses()"></tatami-status-list>
+    <tatami-status-list statuses="vm.mentioned" current-user="vm.currentUser" tatami-refresher="vm.getNewStatuses()"></tatami-status-list>
 </ion-view>
