Groups management page, see description
NOT FULLY WORKING
Only the groups the user belong to are showed.
Two tables are created for groups management.
ElasticSearch need to be implemented for searching groups.

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -196,7 +196,7 @@
                                 <span class="glyphicon glyphicon-globe"></span>
                                 <span translate="global.account.users.title"></span>
                             </a>
-                            <a ui-sref="global.account.groups">
+                            <a ui-sref="account.groups">
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 <span translate="global.account.groups.title"></span>
                             </a>
