--- a/mobile/www/app/components/home/favorites/favorites.html
+++ b/mobile/www/app/components/home/favorites/favorites.html
@@ -1,3 +1,6 @@
 <ion-view view-title="Favorites">
-    <tatami-status-list statuses="vm.favorites" current-user="vm.currentUser" tatami-refresher="vm.getNewStatuses()"></tatami-status-list>
+    <tatami-status-list statuses="vm.favorites"
+                        current-user="vm.currentUser"
+                        tatami-refresher="vm.getNewStatuses()"
+                        tatami-infinite-refresher="vm.getEmpty(finalStatus)"></tatami-status-list>
 </ion-view>
