Added Account controllers, fixed some formatting

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -166,13 +166,13 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a ui-sref="profile">
+                            <a ui-sref="account.profile">
                                 <span class="glyphicon glyphicon-user"></span>
                                 <span translate="global.account.profile.title"></span>
                             </a>
                         </li>
                         <li>
-                            <a ui-sref="preferences">
+                            <a ui-sref="account.preferences">
                                 <span class="glyphicon glyphicon-cog"></span>
                                 <span translate="global.account.preferences.title"></span>
                             </a>
@@ -185,19 +185,19 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a ui-sref="global.account.files">
+                            <a ui-sref="account.files">
                                 <span class="glyphicon glyphicon-file"></span>
                                 <span translate="global.account.files.title"></span>
                             </a>
-                            <a ui-sref="global.account.users">
+                            <a ui-sref="account.users">
                                 <span class="glyphicon glyphicon-globe"></span>
                                 <span translate="global.account.users.title"></span>
                             </a>
-                            <a ui-sref="global.account.groups">
+                            <a ui-sref="account.groups">
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 <span translate="global.account.groups.title"></span>
                             </a>
-                            <a ui-sref="global.account.tags">
+                            <a ui-sref="account.tags">
                                 <span class="glyphicon glyphicon-tags"></span>
                                 <span translate="global.account.tags.title"></span>
                             </a>
