Create service for post/reply modals and fix some translation stuff.

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand"> <!--ui-sref="tatami.home.home.timeline"-->
+            <a class="navbar-brand"> <!--ui-sref="home.home.timeline"-->
                 <span>
                     <img title="{{ 'global.topMenu.title' | translate }}" src="/assets/images/company-logo.png">
                 </span>
@@ -239,7 +239,7 @@
                             skip="false"
                             on-end="onTourEnd(tour)"
                             class="btn btn-primary navbar-btn"
-                            ng-click="openPostModal()">
+                            ng-click="openModal()">
                         <i class="glyphicon glyphicon-pencil"></i>
                         <span translate="global.post.button"></span>
                     </button>
