Complete first pass of post modal and reply behavior. Fix up some issues from last transition to JH pull.

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -239,7 +239,7 @@
                             skip="false"
                             on-end="onTourEnd(tour)"
                             class="btn btn-primary navbar-btn"
-                            ng-click="openModal()">
+                            ng-click="openPostModal()">
                         <i class="glyphicon glyphicon-pencil"></i>
                         <span translate="global.post.button"></span>
                     </button>
