Added tag functionality. Resolved issue with timeline headers.

--- a/src/main/webapp/assets/styles/tatami.css
+++ b/src/main/webapp/assets/styles/tatami.css
@@ -587,6 +587,7 @@ margin-bottom: 20px;
     background-color: white;
     margin-bottom: 0;
     border-radius: 5px 5px 0 0;
+    height: 40px;
 }
 
 .tatams-content h3 {
