Fixed glyphicon-plus button on timeline sidebar.

--- a/src/main/webapp/assets/styles/tatami.css
+++ b/src/main/webapp/assets/styles/tatami.css
@@ -2,13 +2,12 @@ h3 {
   line-height: 30px;
 }
 
+.label-glyphicon-plus {
+  background-color: #999;
+}
+
 .panel-heading {
   font-size: 17.5px;
-  margin-bottom: @line-height-computed;
-  background-color: @panel-bg;
-  border: 1px solid transparent;
-  border-radius: @panel-border-radius;
-  .box-shadow(0 1px 1px rgba(0,0,0,.05));
 }
 
 .indent {
