--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,6 +1,7 @@
-<ion-view view-title="Timeline">
+<ion-view>
     <ion-content>
         <ion-list>
+            <button ng-click="vm.goToCompanyTimeline()" class="button ion-briefcase button-full button-calm">Company Timeline</button>
             <button ng-click="vm.logout()" class="button ion-power button-full button-assertive">Logout</button>
         </ion-list>
     </ion-content>
