Structural changes of list view

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -201,7 +201,7 @@
                                 <span class="glyphicon glyphicon-globe"></span>
                                 <span translate="global.account.users.title"></span>
                             </a>
-                            <a ui-sref="groups">
+                            <a ui-sref="mine">
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 <span translate="global.account.groups.title"></span>
                             </a>
