Got rid of deprecation warnings by upgrading to angular bootstrap 1.2.5. Also loaded OpenLayers to get share location functionality working on posts.

--- a/src/main/webapp/scripts/components/navbar/post/PostView.html
+++ b/src/main/webapp/scripts/components/navbar/post/PostView.html
@@ -126,7 +126,7 @@
             </div>
                 <div ng-if="current.geoLoc">
                     <!-- Was width:250px, changed it to 500 -->
-                    <div id="simpleMap" style="height:250px; width:500px"></div>
+                    <div id="simpleMap" style="height:250px; width:100%;"></div>
                     <div class="geolocMap">
                     </div>
                 </div>
