--- a/mobile/scss/ionic.app.scss
+++ b/mobile/scss/ionic.app.scss
@@ -16,10 +16,10 @@ $dark:                            #444 !default;
 */
 
 // The path for our ionicons font files, relative to the built CSS in www/css
-$ionicons-font-path: "../lib/ionic/fonts" !default;
+$ionicons-font-path: "../lib/ionic/release/fonts" !default;
 
 // Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
+@import "../www/lib/ionic/release/css/ionic";
 
 .platform-ios {
     .tatami-location {
