Add class for span coloring

--- a/mobile/scss/ionic.app.scss
+++ b/mobile/scss/ionic.app.scss
@@ -42,3 +42,8 @@ $ionicons-font-path: "../lib/ionic/release/fonts" !default;
     top: 15px;
     right: 15px;
 }
+
+.link-span {
+    cursor: pointer;
+    color: #387ef5;
+}
