Avoid form submit when using Google Login button

--- a/mobile/www/app/components/login/login.html
+++ b/mobile/www/app/components/login/login.html
@@ -15,7 +15,7 @@
                 </button>
             </div>
             <div class="padding">
-                <button ng-click="vm.googleLogin()" class="button button-block button-stable">
+                <button ng-click="vm.googleLogin()" class="button button-block button-stable" type="button">
                     Log into Google
                 </button>
             </div>
