--- a/mobile/www/app/components/post/post.html
+++ b/mobile/www/app/components/post/post.html
@@ -3,7 +3,7 @@
         <button class="button button-clear button-small icon ion-close-round" style="opacity:0.4;" ng-click="vm.close()">
         </button>
     </ion-nav-buttons>
-    <ion-content padding="true" class="has-subheader has-footer">
+    <ion-content padding="true" class="has-subfooter">
         <div>
             <form name="newPost" novalidate="">
                 <div class="list">
@@ -27,7 +27,7 @@
             </div>
         </span>
     </ion-content>
-    <ion-footer-bar align-title="right" tatami-post-bar-attach="true" class="bar-stable apply-footer">
+    <ion-footer-bar align-title="right" tatami-post-bar-attach="true" class="bar-subfooter">
         <div class="row" style="width:50%;">
             <button style="opacity: 0.5;" class="col-33 button button-clear icon ion-camera" ng-click="vm.getPicture()"></button>
             <button style="opacity: 0.5;" class="col-33 button button-clear icon ion-images" ng-click="vm.getPictureFromLibrary()"></button>
