Set margin-bottom to 0px for navbar in tatami.css

--- a/src/main/webapp/assets/styles/tatami.css
+++ b/src/main/webapp/assets/styles/tatami.css
@@ -120,7 +120,9 @@ h4 {
 
 .navbar {
     background-color: black;
+        margin-bottom: 0px;
 }
+
 .control-group {
     padding-bottom: 10px;
 }
