Use home and status translations for the home page

--- a/mobile/www/app/components/home/favorites/favorites.html
+++ b/mobile/www/app/components/home/favorites/favorites.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Favorites">
+<ion-view view-title="{{ 'tab.favorites' | translate }}">
     <tatami-status-list statuses="vm.favorites"
                         current-user="vm.currentUser"
                         tatami-refresher="vm.getNewStatuses()"
