--- a/mobile/www/app/components/home/timeline/timeline.html
+++ b/mobile/www/app/components/home/timeline/timeline.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Timeline">
+<ion-view view-title="{{ 'tab.timeline' | translate }}">
     <tatami-status-list statuses="vm.statuses"
                         current-user="vm.currentUser"
                         tatami-refresher="vm.getNewStatuses()"
