Cleaned up Account Tags pages

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -205,7 +205,7 @@
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 <span translate="global.account.groups.title"></span>
                             </a>
-                            <a ui-sref="account.tags">
+                            <a ui-sref="tagsFollowing">
                                 <span class="glyphicon glyphicon-tags"></span>
                                 <span translate="global.account.tags.title"></span>
                             </a>
