--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,14 +1,14 @@
-<ion-view>
+<ion-view view-title="{{ 'more.title' | translate }}">
     <ion-content>
         <ion-list>
             <ion-item ng-click="vm.goToCompanyTimeline()" class="text-center">
                 <span class="ion-briefcase calm"></span>&nbsp;
-                <span class="calm" translate="company">Company Timeline</span>
+                <span class="calm" translate="more.company">Company Timeline</span>
             </ion-item>
             <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.logout()" class="text-center">
                 <span class="ion-power assertive"></span>&nbsp;
-                <span class="assertive" translate="logout">Logout</span>
+                <span class="assertive" translate="more.logout">Logout</span>
             </ion-item>
         </ion-list>
     </ion-content>
