Added top poster support

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -212,7 +212,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a ui-sref="global.account.topPosters">
+                            <a ui-sref="account.topPosters">
                                 <span class="glyphicon glyphicon-signal"></span>
                                 <span translate="global.account.topPosters.title"></span>
                             </a>
