Added translation for the user management page

--- a/mobile/www/app/components/follow/following/following.html
+++ b/mobile/www/app/components/follow/following/following.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Following">
+<ion-view view-title="{{ 'tab.following' | translate }}">
     <ion-content>
         <ion-refresher on-refresh="vm.getNewFollowing()"></ion-refresher>
         <ion-list>
