--- a/mobile/www/app/components/follow/suggested/suggested.html
+++ b/mobile/www/app/components/follow/suggested/suggested.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Who to Follow">
+<ion-view view-title="{{ 'tab.suggested.who' | translate }}">
     <ion-content>
         <ion-refresh on-refresh="vm.getNewSuggested()"></ion-refresh>
         <ion-list>
