--- a/mobile/www/app/components/follow/follow.html
+++ b/mobile/www/app/components/follow/follow.html
@@ -1,15 +1,15 @@
 <ion-view>
     <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-        <ion-tab title="Suggested" icon-off="ion-ios-personadd-outline" icon-on="ion-ios-personadd" ui-sref="suggested">
+        <ion-tab title="{{ 'tab.suggested.title' | translate }}" icon-off="ion-ios-personadd-outline" icon-on="ion-ios-personadd" ui-sref="suggested">
             <ion-nav-view name="suggested"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="Following" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" ui-sref="following">
+        <ion-tab title="{{ 'tab.following' | translate }}" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" ui-sref="following">
             <ion-nav-view name="following"></ion-nav-view>
         </ion-tab>
 
-        <ion-tab title="Followers" icon-off="ion-person-stalker" icon-on="ion-person-stalker" ui-sref="follower">
+        <ion-tab title="{{ 'tab.follower' | translate }}" icon-off="ion-person-stalker" icon-on="ion-person-stalker" ui-sref="follower">
             <ion-nav-view name="follower"></ion-nav-view>
         </ion-tab>
 
