--- a/mobile/www/app/components/follow/follower/follower.html
+++ b/mobile/www/app/components/follow/follower/follower.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Followers">
+<ion-view view-title="{{ 'tab.follower' | translate }}>
     <ion-content>
         <ion-refresher on-refresh="vm.getNewFollowers()"></ion-refresher>
         <ion-list>
