--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,10 +1,16 @@
-<ion-view view-title="{{ 'more.title' | translate }}">
+<ion-view view-title="">
     <ion-content>
         <ion-list>
             <ion-item ng-click="vm.goToCompanyTimeline()" class="text-center">
                 <span class="ion-briefcase calm"></span>&nbsp;
                 <span class="calm" translate="more.company">Company Timeline</span>
             </ion-item>
+            <ion-item class="item-divider" translate="more.language.change"></ion-item>
+            <ion-radio ng-repeat="language in vm.languages"
+                       ng-model="vm.language"
+                       ng-value="language.langKey">
+                {{ language.translateKey | translate }}
+            </ion-radio>
             <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.logout()" class="text-center">
                 <span class="ion-power assertive"></span>&nbsp;
