--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -195,7 +195,7 @@
                                 <span class="glyphicon glyphicon-file"></span>
                                 <span translate="global.account.files.title"></span>
                             </a>
-                            <a ui-sref="account.users">
+                            <a ui-sref="following">
                                 <span class="glyphicon glyphicon-globe"></span>
                                 <span translate="global.account.users.title"></span>
                             </a>
