Add center class

--- a/mobile/scss/ionic.app.scss
+++ b/mobile/scss/ionic.app.scss
@@ -47,3 +47,9 @@ $ionicons-font-path: "../lib/ionic/release/fonts" !default;
     cursor: pointer;
     color: #387ef5;
 }
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
