--- a/mobile/scss/ionic.app.scss
+++ b/mobile/scss/ionic.app.scss
@@ -53,3 +53,17 @@ $ionicons-font-path: "../lib/ionic/release/fonts" !default;
     margin-right: auto;
     display: block;
 }
+
+p ul {
+    list-style-type: disc !important;
+    list-style-position: inside !important;
+}
+
+//#list ul {
+//    margin-top: 30px;
+//}
+//#list ul li {
+//    text-align: left;
+//    list-style: disc;
+//    margin: 10px 0px;
+//}
