--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -146,17 +146,17 @@
             <ul class="nav navbar-nav navbar-right" ng-if="$state.includes('sidebarHome') || $state.includes('admin')">
 
                 <li tour-step
-                    order="0"
-                    title="{{ 'global.welcome.help.title' | translate }}"
-                    content="{{ 'global.welcome.help.line1' | translate }}
+                    tour-step-order="0"
+                    tour-step-title="{{ 'global.welcome.help.title' | translate }}"
+                    tour-step-content="{{ 'global.welcome.help.line1' | translate }}
                     <br>
                     <p>{{ 'global.welcome.help.line2' | translate }}</p>
                     <br>"
                     navigation=""
-                    placement="bottom"
-                    ng-click="tour.restart(true)"
-                    skip="false"
-                    on-end="onTourEnd(tour)">
+                    tour-step-placement="bottom"
+                    ng-click="tour.start()"
+                    tour-step-skip="false"
+                    tour-step-on-end="onTourEnd(tour)">
                     <a id="help-tour">
                         <span>
                             <span class="glyphicon glyphicon-question-sign"></span>
@@ -286,9 +286,9 @@
                 <li>
                     <button
                             tour-step
-                            order="2"
-                            title="{{ 'global.welcome.post.title' | translate }}"
-                            content="
+                            tour-step-order="2"
+                            tour-step-title="{{ 'global.welcome.post.title' | translate }}"
+                            tour-step-content="
                             {{ 'global.welcome.post.line1' | translate }}
                             <ul>
                                 <li>{{ 'global.welcome.post.bulletPoint1' | translate }}</li>
@@ -296,9 +296,10 @@
                                 <li>{{ 'global.welcome.post.bulletPoint3' | translate }}</li>
                             </ul>
                             <br>"
-                            placement="left"
-                            skip="false"
-                            on-end="onTourEnd(tour)"
+                            tour-step-placement="left-top"
+                            tour-step-skip="false"
+                            tour-step-on-end="onTourEnd(tour)"
+                            tour-step-append-to-body="true"
                             class="btn btn-primary navbar-btn"
                             ng-click="openPostModal()">
                         <i class="glyphicon glyphicon-pencil"></i>
