Hide back button on post and login state. Use ion-view attribute, rather than ionicNavBarDelegate

--- a/mobile/www/app/components/login/login.html
+++ b/mobile/www/app/components/login/login.html
@@ -1,4 +1,4 @@
-<ion-view name="login-view" view-title="{{ 'login.title' | translate }}">
+<ion-view name="login-view" view-title="{{ 'login.title' | translate }}" hide-back-button="true">
     <ion-content class="has-header has-subheader">
         <form ng-submit="vm.login()">
             <div class="list list-inset">
