--- a/mobile/www/app/components/post/post.html
+++ b/mobile/www/app/components/post/post.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{ 'post.title' | translate }}">
+<ion-view view-title="{{ 'post.title' | translate }}" hide-back-button="true">
     <ion-nav-buttons side="secondary">
         <button class="button button-clear button-small icon ion-close-round" style="opacity:0.4;" ng-click="vm.close()">
         </button>
