Translation file updates

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -139,7 +139,7 @@
                 <li>
                     <a id="logout" ng-click="logout()">
                         <span class="glyphicon glyphicon-off"></span>
-                        <span translate="account.logout"></span>
+                        <span translate="global.topMenu.account.logout"></span>
                     </a>
                 </li>
             </ul>
