--- a/src/main/webapp/scripts/components/navbar/post/PostView.html
+++ b/src/main/webapp/scripts/components/navbar/post/PostView.html
@@ -209,8 +209,8 @@
     </div>
     <div class="modal-footer">
         <a class="btn" aria-hidden="true" ng-click="closeModal()" translate="form.cancel"></a>
-        <span class="hidden-label submit-label" translate="post.button"></span>
+        <span class="hidden-label submit-label" translate="global.post.button"></span>
         <span class="hidden-label tatam-mandatory" translate="post.mandatory"></span>
-        <input ng-click="newStatus()" type="submit" class="btn btn-primary submit" value="{{ 'post.button' | translate }}">
+        <input ng-click="newStatus()" type="submit" class="btn btn-primary submit" value="{{ 'global.post.button' | translate }}">
     </div>
 </div>
